[package]
name = "livox2"
version = "0.1.1"
edition = "2024"
authors = ["ZXY595 <3303057136@qq.com>"]
description = "A lightweight and pure Rust implementation of Livox SDK2, based on async-net and zerocopy."
license = "MIT"
repository = "https://github.com/ZXY595/livox2-rs"

[dependencies]
async-net = "2.0"
crc = "3.3"
futures-core = "0.3"
futures-lite = "2.6"
macro_rules_attribute = "0.2"
thiserror = "2.0"
tuple_list = "0.1.3"
zerocopy = {version = "0.8", features = ["derive", "std"]}

[dev-dependencies]
smol = "2.0"

[features]
default = ["simd"]
simd = ["zerocopy/simd"]
