[package]
name = "livox2"
version = "0.2.2"
edition = "2024"
description = "A lightweight and pure Rust implementation of Livox SDK2, based on async-net and zerocopy."
license = "MIT"
keywords = ["Livox", "SDK", "SLAM", "driver", "lidar"]
repository = "https://github.com/ZXY595/livox2-rs"
categories = ["hardware-support", "network-programming"]

[dependencies]
async-net = { version = "2.0", optional = true }
crc = "3.3"
fugit = { version = "0.3", optional = true }
futures-core = "0.3"
futures-lite = "2.6"
thiserror = "2.0"
tokio = { version = "1.48", default-features = false, features = ["net"], optional = true }
zerocopy = { version = "0.8", features = ["derive", "std"], optional = true }

[dev-dependencies]
smol = "2.0"

[features]
default = ["async-net", "simd"]
async-net = ["dep:async-net", "dep:zerocopy"]
fugit = ["dep:fugit"]
simd = ["zerocopy/simd"]
# io-uring = ["tokio/io-uring"] # planning
# tokio = ["dep:tokio"] # planning
